--- a/looks.css
+++ b/looks.css
@@ -6,7 +6,7 @@
 html, body{
     margin:0px;
     padding:0px;
-	background-color: #292929;
+	background-color: rgb(49, 49, 49);
   font-family: myFirstFont;		
 }
 
@@ -16,7 +16,7 @@ h1 { color: white;
 
 
 .topnav {
-  background-color: #333;
+  background-image: url('Untitled\ design.png');
   overflow: hidden;
 }
 
@@ -40,11 +40,29 @@ h1 { color: white;
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
   color: white;
 }
 
 p {
 text-align: center;
 color: white;
+}
+
+#googleForm {
+  /*margin-left: auto;/*
+  /*margin-right: auto;*/
+  text-align: center;
+}
+
+#nc {
+  position: absolute;
+  left:50px;
+  margin-top: 50px;
+}
+
+footer {
+  position: absolute;
+  bottom:0px;
+  text-align: center;
+  background-color: rgb(52, 52, 52) 
 }
